--- a/PhotoMemo/View/MemoCollectionViewCell.xib
+++ b/PhotoMemo/View/MemoCollectionViewCell.xib
@@ -11,16 +11,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="memoCell" id="gTV-IL-0wX" customClass="MemoCollectionViewCell" customModule="PhotoMemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="113" height="86"/>
+            <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="113" height="86"/>
+                <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cj-eL-ipu">
-                        <rect key="frame" x="8" y="34" width="97" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x8F-Sc-9SB">
+                        <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
+                    </imageView>
+                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qo-uj-ZTu">
+                        <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Vez-Ba-ZF0">
+                        <rect key="frame" x="10" y="10.5" width="115" height="114"/>
+                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="메모 내용" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cj-eL-ipu">
+                        <rect key="frame" x="10" y="58" width="115" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -28,19 +39,34 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" name="memoBase"/>
             <constraints>
-                <constraint firstItem="5cj-eL-ipu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="1C3-0E-Uu4"/>
-                <constraint firstItem="5cj-eL-ipu" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="HtT-ig-yQ2"/>
-                <constraint firstAttribute="trailing" secondItem="5cj-eL-ipu" secondAttribute="trailing" constant="8" id="ZlD-QS-fzx"/>
-                <constraint firstItem="5cj-eL-ipu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="cmW-X1-FJh"/>
+                <constraint firstItem="4Qo-uj-ZTu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="2F1-tF-SaS"/>
+                <constraint firstItem="5cj-eL-ipu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="2HF-Z0-b4T"/>
+                <constraint firstItem="5cj-eL-ipu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="4h1-K1-4eE"/>
+                <constraint firstAttribute="trailing" secondItem="5cj-eL-ipu" secondAttribute="trailing" constant="10" id="9Cl-HX-iZJ"/>
+                <constraint firstAttribute="trailing" secondItem="4Qo-uj-ZTu" secondAttribute="trailing" id="9bq-ax-uMM"/>
+                <constraint firstAttribute="trailing" secondItem="Vez-Ba-ZF0" secondAttribute="trailing" constant="10" id="BuI-LV-x9a"/>
+                <constraint firstItem="4Qo-uj-ZTu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Et4-Mo-6MC"/>
+                <constraint firstItem="x8F-Sc-9SB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GWs-7K-XDo"/>
+                <constraint firstAttribute="bottom" secondItem="4Qo-uj-ZTu" secondAttribute="bottom" id="Qi5-tM-w7a"/>
+                <constraint firstItem="x8F-Sc-9SB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YFI-fB-e7g"/>
+                <constraint firstItem="Vez-Ba-ZF0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="eFS-Zw-1oj"/>
+                <constraint firstItem="Vez-Ba-ZF0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="uIO-LK-VPg"/>
+                <constraint firstAttribute="bottom" secondItem="Vez-Ba-ZF0" secondAttribute="bottom" constant="10" id="uXW-qK-d8G"/>
+                <constraint firstAttribute="trailing" secondItem="x8F-Sc-9SB" secondAttribute="trailing" id="ucb-iA-tdc"/>
+                <constraint firstAttribute="bottom" secondItem="x8F-Sc-9SB" secondAttribute="bottom" id="wNr-kH-x5f"/>
+                <constraint firstItem="5cj-eL-ipu" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="xef-Bf-M7u"/>
             </constraints>
-            <size key="customSize" width="113" height="86"/>
+            <size key="customSize" width="135" height="135"/>
             <connections>
+                <outlet property="checkMarkImageView" destination="Vez-Ba-ZF0" id="uAT-8p-hQf"/>
+                <outlet property="memoImageView" destination="x8F-Sc-9SB" id="fNB-QT-ddL"/>
                 <outlet property="text" destination="5cj-eL-ipu" id="j0B-QB-wNc"/>
             </connections>
-            <point key="canvasLocation" x="183.33333333333334" y="116.51785714285714"/>
+            <point key="canvasLocation" x="199.27536231884059" y="132.92410714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <namedColor name="memoBase">
             <color red="1" green="1" blue="0.70999997854232788" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
